--- a/DemoTests/DemoTests.csproj
+++ b/DemoTests/DemoTests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DemoApp\DemoApp.csproj" />
+  </ItemGroup>
+
 </Project>
